recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:6: error: not found: value occurence
         return(1 + occurence(v,l.tail))
                    ^Occurrences:9: error: not found: value occurence
       else {return(occurence(v,l.tail))}
                    ^