recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (l==Nil) {return 0}
     else {
       if (l.head==v) {
         return(1 + occurence(v,l.tail))
         }
     
       else {return(occurence(v,l.tail))}
     
     }  
}